fix position of an a#start in intro; now it covers up an a.tothetop

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -180,6 +180,7 @@
   }
   /* -- INTRO -- */
   .intro a {
+    top: calc(100vh - 50px);
     height: 50px;
     font-size: 40px;
   }
@@ -297,7 +298,7 @@
     margin-top: 60px;
   }
   .intro a {
-    top: -60px;
+    top: calc(100vh - 60px);
     height: 60px;
     font-size: 50px;
   }
@@ -391,7 +392,7 @@
     transition: .2s;
   }
   .intro a:hover {
-    top: -55px;
+    top: calc(100vh - 55px);
     color: deepskyblue;
   }
   /* -- PROFITS -- */
