--- a/style.css
+++ b/style.css
@@ -117,18 +117,17 @@ nav {
 
 /* -- INTRO -- */
 
-.intro {
-  position: relative;
-  margin-top: 0;
-}
-
 .intro a {
-  display: inline-block;
+  display: block;
   position: absolute;
+  top: calc(100vh - 60px);
+  left: 0;
+  width: 100%;
   height: 60px;
-  left: 50%;
+  text-align: center;
   font-size: 50px;
   color: #111;
+  background-color: rgba(250, 250, 250);
 }
 
 p#start {
